# talktome

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.db  applePttPushService.js  client.html  dataPaths.js  db.js  dbHandler.js  fernet.key  intercomserver.py  package-lock.json  package.json  producerReconciliation.js  producerReconciliation.test.js  requirements.txt  server.js  serverCore.js  talktome_macos_arm64_release_20260314-222418.sha256  webrtcConfig.js  webrtcConfig.test.js
.github/workflows/: bridge-client-release.yml  release.yml
bridge-client/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
bridge-client/scripts/: build-ffmpeg-lgpl-macos.sh  build-ffmpeg-lgpl-mingw.sh  hide-macos-dmg-app-extension.sh  prepare-ffmpeg-sidecar.mjs
bridge-client/src/: app.js  index.html  styles.css
bridge-client/src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json
bridge-client/src-tauri/capabilities/: default.json
bridge-client/src-tauri/icons/: icon.icns
bridge-client/src-tauri/src/: audio.rs  bridge_media.rs  lib.rs  main.rs  model.rs  probe.rs
certs/: cert.pem  key.pem
gateway/: radioGateway.js
public/: admin.html  admin.js  client.js  client.legacy.js  debug.html  index.html  login.css  mediasoup-client.js
scripts/: copy-runtime-deps.js  create-macos-app-bundle.js  create-macos-dmg.sh  create-release-dir.js  postbuild-pkg.js  sync-gateway-to-pi.sh  talktome-server-installer.nsi
server-app/: package-lock.json  package.json
server-app/scripts/: prepare-server-sidecar.mjs
server-app/src/: app.js  index.html  styles.css
server-app/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
server-app/src-tauri/capabilities/: default.json
server-app/src-tauri/src/: lib.rs  main.rs
