[package]
name = "talktome-bridge-client"
version = "0.1.0"
description = "Native Talk To Me bridge client"
authors = ["Talk To Me"]
edition = "2021"

[lib]
name = "talktome_bridge_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
cpal = "0.18.1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
