[package]
name = "talktome-bridge-client"
version = "1.0.7"
description = "Native Talktome bridge client"
authors = ["Talktome"]
edition = "2021"

[lib]
name = "talktome_bridge_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
cpal = "0.18.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSButton", "NSControl", "NSView", "NSWindow"] }
window-vibrancy = "=0.6.0"
