[package]
name = "talktome-server-app"
version = "1.1.0"
description = "Native Talktome server tray app"
authors = ["Talktome"]
edition = "2021"

[lib]
name = "talktome_server_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
if-addrs = "0.13"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSButton", "NSControl", "NSView", "NSWindow"] }
window-vibrancy = "=0.6.0"
